--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset=utf-8 />
   <title> {% if page.title %} {{ page.title }} | {% endif %} CV</title>
-  <link href="media/{{ site.style }}-screen.css" type="text/css" rel="stylesheet" media="screen">
-  <link href="media/{{ site.style }}-print.css" type="text/css" rel="stylesheet" media="print">
+  <link href="media/screen.css" type="text/css" rel="stylesheet" media="screen">
+  <link href="media/print.css" type="text/css" rel="stylesheet" media="print">
 </head>
 <body>
-  <div id="main">
+  <div id="main" style="overflow-x:hidden">
     <div id="content">
     {{ content }}
     </div>
