--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -7,7 +7,7 @@
   <link href="media/print.css" type="text/css" rel="stylesheet" media="print">
 </head>
 <body>
-  <div id="main" style="overflow-x:hidden">
+  <div id="main">
     <div id="content">
     {{ content }}
     </div>
