--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="main">
-    <div class="container" id="content">
+    <div id="content">
     {{ content }}
     </div>
   </div>
